--- a/package.json
+++ b/package.json
@@ -8,14 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "^2.11.2",
+    "@vee-validate/i18n": "^4.5.7",
+    "@vee-validate/rules": "^4.5.7",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "flatpickr": "^4.6.9",
+    "vee-validate": "^4.5.8",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
+    "vue-flatpickr-component": "^9.0.5",
     "vue-loading-overlay": "^5.0.3",
+    "vue-next-select": "^2.10.2",
     "vue-router": "^4.0.0-0",
+    "vue-select": "^3.11.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
