--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.0",
     "flatpickr": "^4.6.9",
+    "swiper": "^8.1.0",
     "vee-validate": "^4.5.8",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
